--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -18,18 +18,18 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
-          <form
+          <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></form>
+          ></textarea>
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
-    
+    <script src="./assets/script.js"></script>
   </body>
 </html>
